istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
  labels:
    release: istio
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*.istio.localhost"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - grafana.istio.localhost
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - kiali.istio.localhost
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - prometheus.istio.localhost
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - jaeger.istio.localhost
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
